updated role to account for disabling stub listener and repointing resolv conf sym link away from stub listener.

--- a/roles/systemdResolved/templates/resolved.conf.j2
+++ b/roles/systemdResolved/templates/resolved.conf.j2
@@ -14,8 +14,8 @@
 # See resolved.conf(5) for details
 
 [Resolve]
-{% if systemdResolved is defined %}
-DNS={{ systemdResolved }}
+{% if systemdResolvedDns is defined %}
+DNS={{ systemdResolvedDns }}
 {% else %}
 #DNS=
 {% endif %}
